base/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
  namespace: 5stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
              - key: 5stack-services
                operator: In
                values:
                  - "true"
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          ports:
            - containerPort: 9000
            - containerPort: 9090
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9090
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
