base/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: 5stack
spec:
  ports:
  - port: 9000
    name: api
    targetPort: 9000
    protocol: TCP
  - port: 9090
    name: console
    targetPort: 9090
    protocol: TCP
  selector:
    app: minio
